test/typeCheckTest/pass/test9.ic
class MainWithDifferentArgs {
	void main (string args) {
	
	}
}

class RealMain {
	void main (string [] args) {
	
	}
}