test/typeCheckTest/fail/test41.ic
class ParamShadowing {
	void test (int x) {
		int x = 0;
	}
	void main (string [] args) {
	
	}
}